# wave-function-evolution

./: .gitignore  CMakeLists.txt  README.md  complex.cpp  complex.hpp  constants.hpp  defaults.hpp  evolve.cpp  evolvequ.cpp  evolvewv.cpp  install_mathgl.sh  lattice.cpp  lattice.hpp  phi.hpp  plot.cpp  profile.sh  run.sh  state.cpp  state.hpp  test-complex.cpp
build-test/: .build.sh.swp  build.sh
libs/: handle.c  handle.h
plot/: install_plot.sh  plot.py  plotwv.py
